# geo-projector-microservice

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  test_geo_projector.py
.github/workflows/: build-docker-images-on-release.yml  docker-build-prod.yml  docker-build-staging.yml
