[tool.poetry]
name = "geo-projector"
version = "0.1.0"
description = "Converts Shapefiles to a specified EPSG for accurate web map plotting."
authors = ["James Hinton", "Spatial Days Ltd"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
geopandas = "^0.13.0"
pyproj = "^3.5.0"
requests = "^2.31.0"
pyogrio = "^0.6.0"
pytest = "^7.3.1"
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
